--- a/expenses/templates/expenses/base.html
+++ b/expenses/templates/expenses/base.html
@@ -1,20 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!--<link type="text/css" href="{% static 'expenses/css/styles.css' %}" rel="stylesheet">-->
 </head>
 <body>
   {% block mainmenu %}
     <ul>
     {% for param in menu %}
-        <li>{{ param }}</li>
+        {% if not forloop.last %}
+            <li><a href="{% url param.url %}">{{ param.title }}</a></li>
+        {% else %}
+            <li><a href="{% url param.url %}">{{ param.title }}</a></li>
+        {% endif %}
     {% endfor %}
     </ul>
   {% endblock mainmenu %}
 
   {% block content %}
-
   {% endblock content%}
 </body>
 </html>
