--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--<link type="text/css" href="{% static 'expenses/css/styles.css' %}" rel="stylesheet">-->
+    <!--<link type="text/css" href="{% static 'budget/css/styles.css' %}" rel="stylesheet">-->
 </head>
 <body>
   {% block mainmenu %}
@@ -21,6 +21,7 @@
   {% endblock mainmenu %}
 
   {% block content %}
+
   {% endblock content%}
 </body>
 </html>
