--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -1,10 +1,11 @@
-{% extends 'expenses/base.html' %}
+{% extends 'budget/base.html' %}
 
 {% block content %}
 <h1>{{ title }}</h1>
 <ul>
     {% for member in members %}
         <li>
+            {{ member.pk }}<br>
             {{ member.member }}<br>
             {{ member.email }}<br>
             {{ member.password }}<br>
