--- a/budget/templates/budget/success.html
+++ b/budget/templates/budget/success.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>success</title>
-</head>
-<body>
-success
-</body>
-</html>
+{% extends 'budget/base.html' %}
+{% block content %}
+
+<title>Success</title>
+<h2>{{ message }}</h2>
+
+{% endblock content %}
