added method new_currency

--- a/budget/templates/budget/currencies.html
+++ b/budget/templates/budget/currencies.html
@@ -9,5 +9,5 @@
     </li>
 {% endfor%}
 </ul>
-<a href="{% url 'add_currency_view' %}">add new currency (test)</a>
+<a href="{% url 'add_currency_view' %}">add new currency</a>
 {% endblock content%}
