reorganized some methods using CBV pattern

--- a/budget/templates/budget/currencies.html
+++ b/budget/templates/budget/currencies.html
@@ -1,6 +1,7 @@
 {% extends 'budget/base.html' %}
 
 {% block content %}
+<title>{{ title }}</title>
 <h1>{{ title }}</h1>
 <ul>
 {% for currency in currencies %}
