--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -39,6 +39,7 @@
     {% for param in menu %}
         <li><a href="{% url param.url %}">{{ param.title }}</a></li>
     {% endfor %}
+        <li><a href="{% url 'login_view' %}">Sign in</a>|<a href="{% url 'register_view' %}">Register</a></li>
     </ul>
   {% endblock mainmenu %}
 
