--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -39,7 +39,11 @@
     {% for param in menu %}
         <li><a href="{% url param.url %}">{{ param.title }}</a></li>
     {% endfor %}
-        <li><a href="{% url 'login_view' %}">Sign in</a>|<a href="{% url 'register_view' %}">Register</a></li>
+        {% if request.user.is_authenticated %}
+            <li>{{ user.username }}<a href="{% url 'logout' %}">Log out</a>
+        {% else %}
+            <li><a href="{% url 'login' %}">Sign in</a>|<a href="{% url 'register' %}">Register</a></li>
+        {% endif %}
     </ul>
   {% endblock mainmenu %}
 
