--- a/budget/templates/budget/expenses.html
+++ b/budget/templates/budget/expenses.html
@@ -1,5 +1,21 @@
 {% extends 'budget/base.html' %}
 
 {% block content%}
-<h1>Expenses page</h1>
+<title>{{ title }}</title>
+<h1>{{ title }}</h1>
+<ul>
+{% for expense in expenses %}
+    <li>
+        {{ expense.date }} | {{ expense.what_is }} - {{ expense.total }}
+        {% if request.user.is_authenticated %}
+            |<a href="{{ expense.edit_expense }}">edit</a>|
+            <a href="{{ expense.delete_expense }}">delete</a>
+        {% endif %}
+    </li>
+{% endfor%}
+</ul>
+
+{% if request.user.is_authenticated %}
+    <a href="{% url 'add_expense' %}">add new expense</a>
+{% endif %}
 {% endblock content %}
