worked with queryset

--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -4,51 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--<link type="text/css" href="{% static 'budget/css/styles.css' %}" rel="stylesheet">-->
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+-->
+    <link type="text/css" href="{% static 'budget/css/styles.css' %}" rel="stylesheet">
 </head>
 <body>
+<!--    <div class="sidenav">-->
+<!--        {% block sidecontent %}-->
 
-  {% block mainmenu %}
-    <style>
-        ul.main_menu {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          overflow: hidden;
-          background-color: #333333;
-        }
+<!--        {% endblock sidecontent %}-->
+<!--    </div>-->
 
-        ul.main_menu li {
-          float: left;
-        }
+    {% block mainmenu %}
+        <ul class="main_menu">
+            {% for param in menu %}
+                <li><a href="{% url param.url %}">{{ param.title }}</a></li>
+            {% endfor %}
+            {% if request.user.is_authenticated %}
+                <li>{{ user.username }} {{ user.id }}<a href="{% url 'logout' %}">Log out</a>
+            {% else %}
+                <li><a href="{% url 'login' %}">Sign in</a>|<a href="{% url 'register' %}">Register</a></li>
+            {% endif %}
+        </ul>
+    {% endblock mainmenu %}
 
-        ul.main_menu li a {
-          display: block;
-          color: white;
-          text-align: center;
-          padding: 16px;
-          text-decoration: none;
-        }
+    {% block content %}
+    {% endblock content%}
 
-        ul.main_menu li a:hover {
-          background-color: #111111;
-        }
-    </style>
-    <ul class="main_menu">
-    {% for param in menu %}
-        <li><a href="{% url param.url %}">{{ param.title }}</a></li>
-    {% endfor %}
-        {% if request.user.is_authenticated %}
-            <li>{{ user.username }} {{ user.id }}<a href="{% url 'logout' %}">Log out</a>
-        {% else %}
-            <li><a href="{% url 'login' %}">Sign in</a>|<a href="{% url 'register' %}">Register</a></li>
-        {% endif %}
-    </ul>
-  {% endblock mainmenu %}
-
-  {% block content %}
-
-  {% endblock content%}
 </body>
 </html>
